0.3 (2011-08-24)
----------------

- Using ``None`` as a pattern is no longer permitted in a call to
  ``add_handler``.  This is for compatibility with an upcoming Pyramid "route
  groups" feature.

0.2 (2011-07-22)
----------------

- Fix include example in docs.

- Add example of ``__action_decorator__`` in documentation.

- Drop install dependency on pyramid_zcml.

- Add a tox.ini for Jenkins testing.

- Fix tests for Pyramid 1.1.

0.1 (2011-01-18)
----------------

- Initial release, broken out of Pyramid core.

