@@ -1,25 +1,23 @@
 [tox]
 envlist = 
-    py25,py26,py27,jython,pypy,cover
+    py25,py26,py27,pypy,jython,cover
+
+# 2.6+-based systems can nominally use the latest pyramid release
 
 [testenv]
 commands = 
-    python setup.py test -q
+    python -Wd setup.py test -q
 deps =
     pyramid
     pyramid_zcml
     Sphinx
     repoze.sphinx.autointerface
 
-[testenv:jython]
-commands = 
-   jython setup.py test -q
-
 [testenv:cover]
 basepython =
     python2.6
 commands = 
-    python setup.py nosetests --with-xunit --with-xcoverage
+    python -Wd setup.py nosetests --with-xunit --with-xcoverage
 deps =
     pyramid
     pyramid_zcml
@@ -29,8 +27,20 @@ deps =
     coverage==3.4
     nosexcover
 
-# we separate coverage into its own testenv because a) "last run wins" wrt
-# cobertura jenkins reporting and b) pypy and jython can't handle any
-# combination of versions of coverage and nosexcover that i can find.
-# coverage==3.4 is required by nosexcover.
+# 2.5-based systems require fixed (potentially older) pyramid and webob setups
 
+[testenv:py25]
+deps =
+    https://github.com/Pylons/webob/zipball/1.1-branch
+    https://github.com/Pylons/pyramid/zipball/1.2-branch
+    pyramid_zcml
+    Sphinx
+    repoze.sphinx.autointerface
+
+[testenv:jython]
+commands = 
+   jython setup.py test -q
+deps =
+    https://github.com/Pylons/webob/zipball/1.1-branch
+    https://github.com/Pylons/pyramid/zipball/1.2-branch
+    pyramid_zcml
