@@ -1,3 +1,15 @@
+Next release
+------------
+
+- Add ``pyramid.handlers.method_name_xformer`` setting, which allows the view
+  associated with a handler action to match when a converted action name is
+  found in the URL (as opposed to the original method name).  See this
+  version's docs for more info.
+
+- Use submodule for docs theme.
+
+- Modify tox testing scheme.
+
 0.3 (2011-08-24)
 ----------------
 
